# node2vec

./: .gitignore  Makefile.exmain  README.md  requirements.txt
graph/: email-Eu-core-nl.edgelist  email-Eu-core-small-denominated.edgelist  email-Eu-core-small.edgelist  er_graph_1024  er_graph_16384  er_graph_2048  er_graph_4096  er_graph_8192  lesmis-fix.edgelist
labels/: email-Eu-core-department-labels-denominated.txt  email-Eu-core-department-labels-nl.txt
notebooks/: data_analysis.ipynb
src3/: compute_ars.py  compute_principal_angles.py  distance.py  generate_er_graph.py  main.py  node2vec.py  node2vec_ms.py  node2vec_ms_hash_one.py  node2vec_ms_walk.py  node2vec_ms_walk2.py  node2vec_ms_walk_biased.py  node2vec_revers.py  plot.py  plot_utils.py  test.py  test_profile.py  utils.py
src_cpp/: CMakeLists.txt  Makefile  scale_experiment.sh  scale_experiment_walks.sh  speed_experiment.sh  speed_experiment_prob.sh
src_cpp/node2vec/: CMakeLists.txt  biasedrandomwalk.cpp  biasedrandomwalk.h  n2v.cpp  n2v.h  node2vec.cpp
src_cpp/node2vec_ms/: CMakeLists.txt  biasedrandomwalk.cpp  biasedrandomwalk.h  n2v.cpp  n2v.h  node2vec.cpp
src_cpp/node2vec_ms_bias/: CMakeLists.txt  biasedrandomwalk.cpp  biasedrandomwalk.h  n2v.cpp  n2v.h  node2vec.cpp
